<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menu_actualizar"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/titleActualizar">
    </item>

    <item
        android:id="@+id/menu_buscr"
        android:actionViewClass="android.widget.SearchView"
        android:orderInCategory="90"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/titleBuscar">
    </item>

    <item
        android:id="@+id/menu_acerca"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/titleAcerdaDe">
    </item>
</menu>
