<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/fondo1">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:autoText="false"
            android:textSize="21dp"
            android:padding="@dimen/activity_horizontal_margin"
            android:textColor="#ff995a"
            android:textIsSelectable="false"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:id="@+id/ly2"
        android:layout_below="@+id/linearLayout"
        android:gravity="left">

        <EditText
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textSize="14dp"
            android:id="@+id/editBuscar"
            android:hint="@string/buscar"
            android:textAppearance="?android:attr/textAppearanceLarge"
           />

        <ImageButton
            android:layout_width="35dp"
            android:layout_height="50dp"
            android:id="@+id/ibtnBuscar"
            android:onClick="clickbtn_buscar"
            android:src="@android:drawable/ic_menu_search"
            style="@style/Widget.AppCompat.Button.Borderless"/>
        <ImageButton
            android:layout_width="35dp"
            android:layout_height="50dp"
            android:id="@+id/ibtnAgregar"
            android:src="@android:drawable/ic_input_add"
            android:onClick="clickbtn_agregar"
            style="@style/Widget.AppCompat.Button.Borderless"/>
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/ibtnAcutualizar"
            android:src="@android:drawable/stat_notify_sync"
            android:onClick="clickbtn_actualizar"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:id="@+id/lny2"
        android:layout_below="@+id/ly2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/nombreLisN"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/lsv"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="10dp">
        </ListView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/nombreLisT"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/lsvT"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true">
        </ListView>
    </LinearLayout>
</RelativeLayout>
